tests dont leak, output works, still not passing tests

--- a/a.out.dSYM/Contents/Resources/Relocations/x86_64/a.out.yml
+++ b/a.out.dSYM/Contents/Resources/Relocations/x86_64/a.out.yml
@@ -2,15 +2,15 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     a.out
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x0, symBinAddr: 0x100003760, symSize: 0x2E0 }
-  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x0, symBinAddr: 0x100003760, symSize: 0x2E0 }
-  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _get_next_line.left_chars, symObjAddr: 0xB60, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x11F, offset: 0x11F, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x2E0, symBinAddr: 0x100003A40, symSize: 0x78 }
-  - { offsetInCU: 0x26, offset: 0x190, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x100003AC0, symSize: 0x80 }
-  - { offsetInCU: 0x54, offset: 0x1BE, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x100003AC0, symSize: 0x80 }
-  - { offsetInCU: 0xA6, offset: 0x210, size: 0x8, addend: 0x0, symName: _ft_substr, symObjAddr: 0x80, symBinAddr: 0x100003B40, symSize: 0x130 }
-  - { offsetInCU: 0x114, offset: 0x27E, size: 0x8, addend: 0x0, symName: _ft_strlen, symObjAddr: 0x1B0, symBinAddr: 0x100003C70, symSize: 0x40 }
-  - { offsetInCU: 0x14A, offset: 0x2B4, size: 0x8, addend: 0x0, symName: _ft_strdup, symObjAddr: 0x1F0, symBinAddr: 0x100003CB0, symSize: 0xB0 }
-  - { offsetInCU: 0x19C, offset: 0x306, size: 0x8, addend: 0x0, symName: _ft_strjoin, symObjAddr: 0x2A0, symBinAddr: 0x100003D60, symSize: 0x140 }
-  - { offsetInCU: 0x1FC, offset: 0x366, size: 0x8, addend: 0x0, symName: _ft_strlcpy, symObjAddr: 0x3E0, symBinAddr: 0x100003EA0, symSize: 0xC7 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x0, symBinAddr: 0x1000036B0, symSize: 0x380 }
+  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x0, symBinAddr: 0x1000036B0, symSize: 0x380 }
+  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _get_next_line.left_chars, symObjAddr: 0xCB8, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x167, offset: 0x167, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x380, symBinAddr: 0x100003A30, symSize: 0x78 }
+  - { offsetInCU: 0x26, offset: 0x1D8, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x100003AB0, symSize: 0x80 }
+  - { offsetInCU: 0x54, offset: 0x206, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x100003AB0, symSize: 0x80 }
+  - { offsetInCU: 0xA6, offset: 0x258, size: 0x8, addend: 0x0, symName: _ft_substr, symObjAddr: 0x80, symBinAddr: 0x100003B30, symSize: 0x130 }
+  - { offsetInCU: 0x114, offset: 0x2C6, size: 0x8, addend: 0x0, symName: _ft_strlen, symObjAddr: 0x1B0, symBinAddr: 0x100003C60, symSize: 0x40 }
+  - { offsetInCU: 0x14A, offset: 0x2FC, size: 0x8, addend: 0x0, symName: _ft_strdup, symObjAddr: 0x1F0, symBinAddr: 0x100003CA0, symSize: 0xB0 }
+  - { offsetInCU: 0x19C, offset: 0x34E, size: 0x8, addend: 0x0, symName: _ft_strjoin, symObjAddr: 0x2A0, symBinAddr: 0x100003D50, symSize: 0x140 }
+  - { offsetInCU: 0x1FC, offset: 0x3AE, size: 0x8, addend: 0x0, symName: _ft_strlcpy, symObjAddr: 0x3E0, symBinAddr: 0x100003E90, symSize: 0xC7 }
 ...
