--- a/a.out.dSYM/Contents/Resources/Relocations/x86_64/a.out.yml
+++ b/a.out.dSYM/Contents/Resources/Relocations/x86_64/a.out.yml
@@ -2,15 +2,20 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     a.out
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x0, symBinAddr: 0x1000033D0, symSize: 0x5C0 }
-  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x0, symBinAddr: 0x1000033D0, symSize: 0x5C0 }
-  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _get_next_line.left_chars, symObjAddr: 0x1198, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x168, offset: 0x168, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x5C0, symBinAddr: 0x100003990, symSize: 0x79 }
-  - { offsetInCU: 0x26, offset: 0x1D9, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x100003A10, symSize: 0x80 }
-  - { offsetInCU: 0x54, offset: 0x207, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x100003A10, symSize: 0x80 }
-  - { offsetInCU: 0xA6, offset: 0x259, size: 0x8, addend: 0x0, symName: _ft_substr, symObjAddr: 0x80, symBinAddr: 0x100003A90, symSize: 0x130 }
-  - { offsetInCU: 0x114, offset: 0x2C7, size: 0x8, addend: 0x0, symName: _ft_strlen, symObjAddr: 0x1B0, symBinAddr: 0x100003BC0, symSize: 0x40 }
-  - { offsetInCU: 0x14A, offset: 0x2FD, size: 0x8, addend: 0x0, symName: _ft_strdup, symObjAddr: 0x1F0, symBinAddr: 0x100003C00, symSize: 0xB0 }
-  - { offsetInCU: 0x19C, offset: 0x34F, size: 0x8, addend: 0x0, symName: _ft_strjoin, symObjAddr: 0x2A0, symBinAddr: 0x100003CB0, symSize: 0x140 }
-  - { offsetInCU: 0x1FC, offset: 0x3AF, size: 0x8, addend: 0x0, symName: _ft_strlcpy, symObjAddr: 0x3E0, symBinAddr: 0x100003DF0, symSize: 0xC7 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _handle_error, symObjAddr: 0x0, symBinAddr: 0x100003420, symSize: 0x60 }
+  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _get_next_line, symObjAddr: 0x250, symBinAddr: 0x100003670, symSize: 0x300 }
+  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _get_next_line.left_chars, symObjAddr: 0x11D0, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0xD7, offset: 0xD7, size: 0x8, addend: 0x0, symName: _handle_error, symObjAddr: 0x0, symBinAddr: 0x100003420, symSize: 0x60 }
+  - { offsetInCU: 0x11B, offset: 0x11B, size: 0x8, addend: 0x0, symName: _start_line, symObjAddr: 0x60, symBinAddr: 0x100003480, symSize: 0xC0 }
+  - { offsetInCU: 0x16D, offset: 0x16D, size: 0x8, addend: 0x0, symName: _handle_left_chars, symObjAddr: 0x120, symBinAddr: 0x100003540, symSize: 0x80 }
+  - { offsetInCU: 0x1B1, offset: 0x1B1, size: 0x8, addend: 0x0, symName: _handle_no_newline_read, symObjAddr: 0x1A0, symBinAddr: 0x1000035C0, symSize: 0xB0 }
+  - { offsetInCU: 0x211, offset: 0x211, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x550, symBinAddr: 0x100003970, symSize: 0x70 }
+  - { offsetInCU: 0x26, offset: 0x282, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x1000039E0, symSize: 0x80 }
+  - { offsetInCU: 0x54, offset: 0x2B0, size: 0x8, addend: 0x0, symName: _ft_strchr, symObjAddr: 0x0, symBinAddr: 0x1000039E0, symSize: 0x80 }
+  - { offsetInCU: 0xA6, offset: 0x302, size: 0x8, addend: 0x0, symName: _ft_substr, symObjAddr: 0x80, symBinAddr: 0x100003A60, symSize: 0x130 }
+  - { offsetInCU: 0x114, offset: 0x370, size: 0x8, addend: 0x0, symName: _ft_strlen, symObjAddr: 0x1B0, symBinAddr: 0x100003B90, symSize: 0x40 }
+  - { offsetInCU: 0x14A, offset: 0x3A6, size: 0x8, addend: 0x0, symName: _ft_strdup, symObjAddr: 0x1F0, symBinAddr: 0x100003BD0, symSize: 0xB0 }
+  - { offsetInCU: 0x19C, offset: 0x3F8, size: 0x8, addend: 0x0, symName: _ft_strjoin, symObjAddr: 0x2A0, symBinAddr: 0x100003C80, symSize: 0x140 }
+  - { offsetInCU: 0x1FC, offset: 0x458, size: 0x8, addend: 0x0, symName: _ft_strlcpy, symObjAddr: 0x3E0, symBinAddr: 0x100003DC0, symSize: 0xD0 }
+  - { offsetInCU: 0x24E, offset: 0x4AA, size: 0x8, addend: 0x0, symName: _ft_strlcat, symObjAddr: 0x4B0, symBinAddr: 0x100003E90, symSize: 0xD4 }
 ...
